// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Fields Test: back home 1`] = `
<div
  class="home"
>
  {"route":{"path":"/","params":{}}}
</div>
`;

exports[`Basic Fields Test: back to b 1`] = `
<div
  class="b"
>
  {"route":{"path":"/b","params":{"my":"arg"}}}
</div>
`;

exports[`Basic Fields Test: back to c 1`] = `
<div
  class="c"
>
  {"route":{"path":"/c","params":{"gfsdf":"tas"}}}
</div>
`;

exports[`Basic Fields Test: back to home 1`] = `
<div
  class="home"
>
  {"route":{"path":"/","params":{}}}
</div>
`;

exports[`Basic Fields Test: back to home multi back no effect 1`] = `
<div
  class="home"
>
  {"route":{"path":"/","params":{}}}
</div>
`;

exports[`Basic Fields Test: invalid oute 1`] = `
<div
  class="404"
>
  {"route":{"path":"/gfadsdf","params":{"jk":"hj"}}}
</div>
`;

exports[`Basic Fields Test: renderig 404 1`] = `
<div
  class="404"
>
  {"route":{"path":"/","params":{}}}
</div>
`;

exports[`Basic Fields Test: renderig a 1`] = `
<div
  class="a"
>
  {"route":{"path":"/a","params":{"xvcb":"asdf"}}}
</div>
`;

exports[`Basic Fields Test: renderig a different params 1`] = `
<div
  class="a"
>
  {"route":{"path":"/a","params":{"gewar":"yvcxv"}}}
</div>
`;

exports[`Basic Fields Test: renderig a with old params because back 1`] = `
<div
  class="a"
>
  {"route":{"path":"/a","params":{"xvcb":"asdf"}}}
</div>
`;

exports[`Basic Fields Test: renderig b 1`] = `
<div
  class="b"
>
  {"route":{"path":"/b","params":{"my":"arg"}}}
</div>
`;

exports[`Basic Fields Test: renderig c 1`] = `
<div
  class="c"
>
  {"route":{"path":"/c","params":{"gfsdf":"tas"}}}
</div>
`;

exports[`Basic Fields Test: still invalid oute 1`] = `
<div
  class="404"
>
  {"route":{"path":"/gfadsdf","params":{"iou":".-ö"}}}
</div>
`;
